[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"pallets/asset-tx-payment",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"axia-parachains/",
	"axia-parachains/pallets/parachain-info",
	"axia-parachains/pallets/ping",
	"axia-parachains/rococo",
	"axia-parachains/shell",
	"axia-parachains/parachains-common",
	"axia-parachains/statemint",
	"axia-parachains/statemine",
	"axia-parachains/westmint",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/runtime-upgrade",
	"test/service",
]

[profile.release]
panic = "unwind"
