[package]
name = "cumulus-client-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Axlib dependencies
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# Axia dependencies
axia-primitives = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }
axia-node-primitives = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }
axia-overseer = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }
axia-node-subsystem = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }

# Cumulus dependencies
cumulus-client-network = { path = "../network" }
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.10.2"
tracing = "0.1.25"

[dev-dependencies]
# Axia dependencies
axia-node-subsystem-test-helpers = { git = "https://github.com/AXIA-DEV/axia", branch = "master" }

# Cumulus dependencies
cumulus-test-runtime = { path = "../../test/runtime" }
cumulus-test-client = { path = "../../test/client" }
# Axlib dependencies

sp-state-machine = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-tracing = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# Other dependencies
async-trait = "0.1.42"
