[package]
name = "cumulus-client-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-client-collator = { path = "../collator" }
cumulus-client-pov-recovery = { path = "../pov-recovery" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Axlib dependencies
sc-chain-spec = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-service = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-telemetry = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-tracing = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus-babe = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-blockchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.12" }
polkadot-service = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.12" }
polkadot-overseer = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.12" }

# Other deps
tracing = "0.1.22"
codec = { package = "parity-scale-codec", version = "2.3.0" }
parking_lot = "0.10.2"
