[package]
name = "parachains-common"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Logic which is common to all parachain runtimes"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External dependencies
codec = { package = 'parity-scale-codec', version = '2.3.0', features = ['derive'], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# Axlib dependencies
sp-consensus-aura = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
sp-io = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
frame-executive = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
frame-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
frame-system = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
pallet-assets = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
pallet-authorship = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
pallet-balances = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }

# Axia dependencies
axia-runtime-common = { git = "https://github.com/AXIA-DEV/axia", default-features = false , branch = "master" }
axia-primitives = { git = "https://github.com/AXIA-DEV/axia", default-features = false , branch = "master" }
xcm = { git = "https://github.com/AXIA-DEV/axia", default-features = false , branch = "master" }
xcm-executor = { git = "https://github.com/AXIA-DEV/axia", default-features = false , branch = "master" }

# Local dependencies
pallet-asset-tx-payment = { path = '../../pallets/asset-tx-payment', default-features = false }
pallet-collator-selection = { path = '../../pallets/collator-selection', default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
pallet-authorship = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

[features]
default = ["std"]
std = [
	'codec/std',
	'scale-info/std',
	'sp-consensus-aura/std',
	'sp-std/std',
	'sp-io/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-asset-tx-payment/std',
	'pallet-collator-selection/std',
	'pallet-assets/std',
	'pallet-authorship/std',
	'pallet-balances/std',
	'axia-runtime-common/std',
	'axia-primitives/std',
]
