[package]
name = "cumulus-primitives-core"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Axlib dependencies
sp-std = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }
sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }
sp-trie = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }

# Axia dependencies
axia-allychain = { git = "https://github.com/AXIA-DEV/axia", default-features = false, branch = "master" }
axia-primitives = { git = "https://github.com/AXIA-DEV/axia", default-features = false, branch = "master" }
axia-core-primitives = { git = "https://github.com/AXIA-DEV/axia", default-features = false, branch = "master" }

# Other dependencies
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"axia-primitives/std",
	"axia-allychain/std",
	"axia-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"sp-api/std",
	"frame-support/std",
]
