[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Axlib dependencies
sp-std = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }
sp-trie = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false, branch = "master" }

# Axia dependencies
axia-allychain = { git = "https://github.com/AXIA-DEV/axia", default-features = false, branch = "master" }
axia-primitives = { git = "https://github.com/AXIA-DEV/axia", default-features = false, branch = "master" }
axia-core-primitives = { git = "https://github.com/AXIA-DEV/axia", default-features = false, branch = "master" }
xcm = { git = "https://github.com/AXIA-DEV/axia", default-features = false, branch = "master" }

cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"axia-primitives/std",
	"axia-allychain/std",
	"axia-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"frame-support/std",
	"cumulus-primitives-core/std",
]
